Hadoop HDFS Change Log

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

    HDFS-8135. Remove the deprecated FSConstants class. (Li Lu via wheat9)

  NEW FEATURES

  IMPROVEMENTS

    HDFS-7875. Improve log message when wrong value configured for
    dfs.datanode.failed.volumes.tolerated.
    (nijel via harsh)

    HDFS-2360. Ugly stacktrace when quota exceeds. (harsh)

    HDFS-7835. make initial sleeptime in locateFollowingBlock configurable for
    DFSClient. (Zhihai Xu via Yongjun Zhang)

    HDFS-7829. Code clean up for LocatedBlock. (Takanobu Asanuma via jing9)

    HDFS-7854. Separate class DataStreamer out of DFSOutputStream. (Li Bo via
    jing9)

    HDFS-7713. Implement mkdirs in the HDFS Web UI. (Ravi Prakash via wheat9)

    HDFS-7928. Scanning blocks from disk during rolling upgrade startup takes
    a lot of time if disks are busy (Rushabh S Shah via kihwal)

    HDFS-7990. IBR delete ack should not be delayed. (daryn via kihwal)

    HDFS-8004. Use KeyProviderCryptoExtension#warmUpEncryptedKeys when creating
    an encryption zone. (awang via asuresh)

    HDFS-6263. Remove DRFA.MaxBackupIndex config from log4j.properties.
    (Abhiraj Butala via aajisaka)

    HDFS-6408. Remove redundant definitions in log4j.properties.
    (Abhiraj Butala via aajisaka)

    HDFS-7890. Improve information on Top users for metrics in
    RollingWindowsManager and lower log level (J.Andreina via vinayakumarb)

    HDFS-7645. Rolling upgrade is restoring blocks from trash multiple times.
    (Vinayakumar B and Keisuke Ogiwara via Arpit Agarwal)

    HDFS-7944. Minor cleanup of BlockPoolManager#getAllNamenodeThreads.
    (Arpit Agarwal)

    HDFS-7671. hdfs user guide should point to the common rack awareness doc.
    (Kai Sasaki via aajisaka)

    HDFS-8009. Signal congestion on the DataNode. (wheat9)

    HDFS-7978. Add LOG.isDebugEnabled() guard for some LOG.debug(..).
    (Walter Su via wang)
