@@ -8,6 +8,9 @@ Release 2.8.0 - UNRELEASED
 
   NEW FEATURES
 
+    HDFS-7891. A block placement policy with best rack failure tolerance.
+    (Walter Su via szetszwo)
+
   IMPROVEMENTS
 
     HDFS-7875. Improve log message when wrong value configured for
